go/parser/sysyf_parser.go
// Code generated from SysYF.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // SysYF
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SysYFParser struct {
	*antlr.BaseParser
}

var SysYFParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sysyfParserInit() {
	staticData := &SysYFParserStaticData
	staticData.LiteralNames = []string{
		"", "'const'", "','", "';'", "'='", "'{'", "'}'", "'('", "')'", "'if'",
		"'else'", "'while'", "'break'", "'continue'", "'return'", "'void'",
		"'int'", "'float'", "'+'", "'-'", "'*'", "'/'", "'%'", "'||'", "'&&'",
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'['", "']'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "VOID_T",
		"INT_T", "FLOAT_T", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LOR", "LAND",
		"EQ", "NEQ", "LT", "LTE", "GT", "GTE", "NOT", "LBRACKET", "RBRACKET",
		"NAME", "INT", "FLOAT", "C_COMMENT", "CPP_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"comp_unit", "global_def", "const_decl", "btype", "const_def", "const_init_val",
		"var_decl", "var_def", "func_def", "func_fparam", "block", "block_item",
		"stmt", "assign_stmt", "empty_stmt", "exp_stmt", "if_stmt", "while_stmt",
		"break_stmt", "continue_stmt", "return_stmt", "cond_exp", "exp", "otherexp",
		"func_call", "lval", "ident", "number",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SysYFParserInit initializes any static state used to implement SysYFParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSysYFParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SysYFParserInit() {
	staticData := &SysYFParserStaticData
	staticData.once.Do(sysyfParserInit)
}

// NewSysYFParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSysYFParser(input antlr.TokenStream) *SysYFParser {
	SysYFParserInit()
	this := new(SysYFParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SysYFParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SysYF.g4"

	return this
}

// SysYFParser tokens.
const (
	SysYFParserEOF         = antlr.TokenEOF
	SysYFParserT__0        = 1
	SysYFParserT__1        = 2
	SysYFParserT__2        = 3
	SysYFParserT__3        = 4
	SysYFParserT__4        = 5
	SysYFParserT__5        = 6
	SysYFParserT__6        = 7
	SysYFParserT__7        = 8
	SysYFParserT__8        = 9
	SysYFParserT__9        = 10
	SysYFParserT__10       = 11
	SysYFParserT__11       = 12
	SysYFParserT__12       = 13
	SysYFParserT__13       = 14
	SysYFParserVOID_T      = 15
	SysYFParserINT_T       = 16
	SysYFParserFLOAT_T     = 17
	SysYFParserPLUS        = 18
	SysYFParserMINUS       = 19
	SysYFParserMUL         = 20
	SysYFParserDIV         = 21
	SysYFParserMOD         = 22
	SysYFParserLOR         = 23
	SysYFParserLAND        = 24
	SysYFParserEQ          = 25
	SysYFParserNEQ         = 26
	SysYFParserLT          = 27
	SysYFParserLTE         = 28
	SysYFParserGT          = 29
	SysYFParserGTE         = 30
	SysYFParserNOT         = 31
	SysYFParserLBRACKET    = 32
	SysYFParserRBRACKET    = 33
	SysYFParserNAME        = 34
	SysYFParserINT         = 35
	SysYFParserFLOAT       = 36
	SysYFParserC_COMMENT   = 37
	SysYFParserCPP_COMMENT = 38
	SysYFParserWS          = 39
)

// SysYFParser rules.
const (
	SysYFParserRULE_comp_unit      = 0
	SysYFParserRULE_global_def     = 1
	SysYFParserRULE_const_decl     = 2
	SysYFParserRULE_btype          = 3
	SysYFParserRULE_const_def      = 4
	SysYFParserRULE_const_init_val = 5
	SysYFParserRULE_var_decl       = 6
	SysYFParserRULE_var_def        = 7
	SysYFParserRULE_func_def       = 8
	SysYFParserRULE_func_fparam    = 9
	SysYFParserRULE_block          = 10
	SysYFParserRULE_block_item     = 11
	SysYFParserRULE_stmt           = 12
	SysYFParserRULE_assign_stmt    = 13
	SysYFParserRULE_empty_stmt     = 14
	SysYFParserRULE_exp_stmt       = 15
	SysYFParserRULE_if_stmt        = 16
	SysYFParserRULE_while_stmt     = 17
	SysYFParserRULE_break_stmt     = 18
	SysYFParserRULE_continue_stmt  = 19
	SysYFParserRULE_return_stmt    = 20
	SysYFParserRULE_cond_exp       = 21
	SysYFParserRULE_exp            = 22
	SysYFParserRULE_otherexp       = 23
	SysYFParserRULE_func_call      = 24
	SysYFParserRULE_lval           = 25
	SysYFParserRULE_ident          = 26
	SysYFParserRULE_number         = 27
)

// IComp_unitContext is an interface to support dynamic dispatch.
type IComp_unitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllGlobal_def() []IGlobal_defContext
	Global_def(i int) IGlobal_defContext

	// IsComp_unitContext differentiates from other interfaces.
	IsComp_unitContext()
}

type Comp_unitContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyComp_unitContext() *Comp_unitContext {
	var p = new(Comp_unitContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_comp_unit
	return p
}

func InitEmptyComp_unitContext(p *Comp_unitContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_comp_unit
}

func (*Comp_unitContext) IsComp_unitContext() {}

func NewComp_unitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Comp_unitContext {
	var p = new(Comp_unitContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SysYFParserRULE_comp_unit

	return p
}

func (s *Comp_unitContext) GetParser() antlr.Parser { return s.parser }

func (s *Comp_unitContext) EOF() antlr.TerminalNode {
	return s.GetToken(SysYFParserEOF, 0)
}

func (s *Comp_unitContext) AllGlobal_def() []IGlobal_defContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IGlobal_defContext); ok {
			len++
		}
	}

	tst := make([]IGlobal_defContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IGlobal_defContext); ok {
			tst[i] = t.(IGlobal_defContext)
			i++
		}
	}

	return tst
}

func (s *Comp_unitContext) Global_def(i int) IGlobal_defContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGlobal_defContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGlobal_defContext)
}

func (s *Comp_unitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Comp_unitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Comp_unitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.EnterComp_unit(s)
	}
}

func (s *Comp_unitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.ExitComp_unit(s)
	}
}

func (s *Comp_unitContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SysYFVisitor:
		return t.VisitComp_unit(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SysYFParser) Comp_unit() (localctx IComp_unitContext) {
	localctx = NewComp_unitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SysYFParserRULE_comp_unit)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&229378) != 0) {
		{
			p.SetState(56)
			p.Global_def()
		}

		p.SetState(59)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(61)
		p.Match(SysYFParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGlobal_defContext is an interface to support dynamic dispatch.
type IGlobal_defContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Const_decl() IConst_declContext
	Var_decl() IVar_declContext
	Func_def() IFunc_defContext

	// IsGlobal_defContext differentiates from other interfaces.
	IsGlobal_defContext()
}

type Global_defContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGlobal_defContext() *Global_defContext {
	var p = new(Global_defContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_global_def
	return p
}

func InitEmptyGlobal_defContext(p *Global_defContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_global_def
}

func (*Global_defContext) IsGlobal_defContext() {}

func NewGlobal_defContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Global_defContext {
	var p = new(Global_defContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SysYFParserRULE_global_def

	return p
}

func (s *Global_defContext) GetParser() antlr.Parser { return s.parser }

func (s *Global_defContext) Const_decl() IConst_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConst_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConst_declContext)
}

func (s *Global_defContext) Var_decl() IVar_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVar_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVar_declContext)
}

func (s *Global_defContext) Func_def() IFunc_defContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunc_defContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunc_defContext)
}

func (s *Global_defContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Global_defContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Global_defContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.EnterGlobal_def(s)
	}
}

func (s *Global_defContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.ExitGlobal_def(s)
	}
}

func (s *Global_defContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SysYFVisitor:
		return t.VisitGlobal_def(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SysYFParser) Global_def() (localctx IGlobal_defContext) {
	localctx = NewGlobal_defContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SysYFParserRULE_global_def)
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(63)
			p.Const_decl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(64)
			p.Var_decl()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(65)
			p.Func_def()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConst_declContext is an interface to support dynamic dispatch.
type IConst_declContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Btype() IBtypeContext
	AllConst_def() []IConst_defContext
	Const_def(i int) IConst_defContext

	// IsConst_declContext differentiates from other interfaces.
	IsConst_declContext()
}

type Const_declContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConst_declContext() *Const_declContext {
	var p = new(Const_declContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_const_decl
	return p
}

func InitEmptyConst_declContext(p *Const_declContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_const_decl
}

func (*Const_declContext) IsConst_declContext() {}

func NewConst_declContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Const_declContext {
	var p = new(Const_declContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SysYFParserRULE_const_decl

	return p
}

func (s *Const_declContext) GetParser() antlr.Parser { return s.parser }

func (s *Const_declContext) Btype() IBtypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBtypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBtypeContext)
}

func (s *Const_declContext) AllConst_def() []IConst_defContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConst_defContext); ok {
			len++
		}
	}

	tst := make([]IConst_defContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConst_defContext); ok {
			tst[i] = t.(IConst_defContext)
			i++
		}
	}

	return tst
}

func (s *Const_declContext) Const_def(i int) IConst_defContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConst_defContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConst_defContext)
}

func (s *Const_declContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Const_declContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Const_declContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.EnterConst_decl(s)
	}
}

func (s *Const_declContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.ExitConst_decl(s)
	}
}

func (s *Const_declContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SysYFVisitor:
		return t.VisitConst_decl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SysYFParser) Const_decl() (localctx IConst_declContext) {
	localctx = NewConst_declContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SysYFParserRULE_const_decl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Match(SysYFParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(69)
		p.Btype()
	}
	{
		p.SetState(70)
		p.Const_def()
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SysYFParserT__1 {
		{
			p.SetState(71)
			p.Match(SysYFParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(72)
			p.Const_def()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(78)
		p.Match(SysYFParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBtypeContext is an interface to support dynamic dispatch.
type IBtypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INT_T() antlr.TerminalNode
	FLOAT_T() antlr.TerminalNode

	// IsBtypeContext differentiates from other interfaces.
	IsBtypeContext()
}

type BtypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBtypeContext() *BtypeContext {
	var p = new(BtypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_btype
	return p
}

func InitEmptyBtypeContext(p *BtypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_btype
}

func (*BtypeContext) IsBtypeContext() {}

func NewBtypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BtypeContext {
	var p = new(BtypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SysYFParserRULE_btype

	return p
}

func (s *BtypeContext) GetParser() antlr.Parser { return s.parser }

func (s *BtypeContext) INT_T() antlr.TerminalNode {
	return s.GetToken(SysYFParserINT_T, 0)
}

func (s *BtypeContext) FLOAT_T() antlr.TerminalNode {
	return s.GetToken(SysYFParserFLOAT_T, 0)
}

func (s *BtypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BtypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BtypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.EnterBtype(s)
	}
}

func (s *BtypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.ExitBtype(s)
	}
}

func (s *BtypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SysYFVisitor:
		return t.VisitBtype(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SysYFParser) Btype() (localctx IBtypeContext) {
	localctx = NewBtypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SysYFParserRULE_btype)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		_la = p.GetTokenStream().LA(1)

		if !(_la == SysYFParserINT_T || _la == SysYFParserFLOAT_T) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConst_defContext is an interface to support dynamic dispatch.
type IConst_defContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Ident() IIdentContext
	Const_init_val() IConst_init_valContext
	LBRACKET() antlr.TerminalNode
	RBRACKET() antlr.TerminalNode
	INT() antlr.TerminalNode

	// IsConst_defContext differentiates from other interfaces.
	IsConst_defContext()
}

type Const_defContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConst_defContext() *Const_defContext {
	var p = new(Const_defContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_const_def
	return p
}

func InitEmptyConst_defContext(p *Const_defContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_const_def
}

func (*Const_defContext) IsConst_defContext() {}

func NewConst_defContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Const_defContext {
	var p = new(Const_defContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SysYFParserRULE_const_def

	return p
}

func (s *Const_defContext) GetParser() antlr.Parser { return s.parser }

func (s *Const_defContext) Ident() IIdentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *Const_defContext) Const_init_val() IConst_init_valContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConst_init_valContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConst_init_valContext)
}

func (s *Const_defContext) LBRACKET() antlr.TerminalNode {
	return s.GetToken(SysYFParserLBRACKET, 0)
}

func (s *Const_defContext) RBRACKET() antlr.TerminalNode {
	return s.GetToken(SysYFParserRBRACKET, 0)
}

func (s *Const_defContext) INT() antlr.TerminalNode {
	return s.GetToken(SysYFParserINT, 0)
}

func (s *Const_defContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Const_defContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Const_defContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.EnterConst_def(s)
	}
}

func (s *Const_defContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SysYFListener); ok {
		listenerT.ExitConst_def(s)
	}
}

func (s *Const_defContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SysYFVisitor:
		return t.VisitConst_def(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SysYFParser) Const_def() (localctx IConst_defContext) {
	localctx = NewConst_defContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SysYFParserRULE_const_def)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.Ident()
	}
	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == SysYFParserLBRACKET {
		{
			p.SetState(83)
			p.Match(SysYFParserLBRACKET)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(85)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == SysYFParserINT {
			{
				p.SetState(84)
				p.Match(SysYFParserINT)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}
		{
			p.SetState(87)
			p.Match(SysYFParserRBRACKET)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(90)
		p.Match(SysYFParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(91)
		p.Const_init_val()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConst_init_valContext is an interface to support dynamic dispatch.
type IConst_init_valContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsConst_init_valContext differentiates from other interfaces.
	IsConst_init_valContext()
}

type Const_init_valContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConst_init_valContext() *Const_init_valContext {
	var p = new(Const_init_valContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_const_init_val
	return p
}

func InitEmptyConst_init_valContext(p *Const_init_valContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SysYFParserRULE_const_init_val
}

func (*Const_init_valContext) IsConst_init_valContext() {}

func NewConst_init_valContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Const_init_valContext {
	var p = new(Const_init_valContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SysYFParserRULE_const_init_val

	return p
}

func (s *Const_init_valContext) GetParser() antlr.Parser { return s.parser }

func (s *Const_init_valContext) CopyAll(ctx *Const_init_valContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *Const_init_valContext) GetRuleContext() antlr.RuleContext {
	return s
}
